--- a/Airline_passenger.ipynb
+++ b/Airline_passenger.ipynb
@@ -11,15 +11,8 @@
         "448CDAPjqfQr",
         "-JiQyfWJYklI",
         "y-Ehk30pYrdP",
-        "QHF8YVU7Yuh3",
         "qYpmQ266Yuh3",
-        "OH-pJp9IphqM",
-        "bbFf2-_FphqN",
-        "_ouA3fa0phqN",
         "Seke61FWphqN",
-        "PIIx-8_IphqN",
-        "t27r6nlMphqO",
-        "r2jJGEOYphqO",
         "b0JNsNcRphqO",
         "BZR9WyysphqO",
         "jj7wYXLtphqO",
@@ -213,9 +206,9 @@
         "\n",
         "4. What is distribution of average ratings of Food_bev and entertainment given by the passenger in every class?\n",
         "\n",
-        "5. Which cabin type has more service ratings?\n",
+        "5. Which cabin type has more recommended based on ground service ratings?\n",
         "\n",
-        "6. Which cabin type has overall service ratings?\n",
+        "6.  Which cabin type has more recomended based on overall service ratings by customers?\n",
         "\n",
         "7. Which travellers_type has overall service ratings?\n",
         "\n",
@@ -378,7 +371,7 @@
     {
       "cell_type": "code",
       "source": [
-        "airline_df=pd.read_excel(r\"/content/drive/MyDrive/Colab Notebooks/Airline_passenger_referal_prediction/data_airline_reviews.xlsx\")"
+        "airline_df1=pd.read_excel(r\"/content/drive/MyDrive/Colab Notebooks/Airline_passenger_referal_prediction/data_airline_reviews.xlsx\")"
       ],
       "metadata": {
         "id": "R1LRwdXYCKUB"
@@ -399,7 +392,7 @@
       "cell_type": "code",
       "source": [
         "# Dataset First Look\n",
-        "airline_df.head(5)"
+        "airline_df1.head(5)"
       ],
       "metadata": {
         "id": "LWNFOSvLl09H"
@@ -410,7 +403,7 @@
     {
       "cell_type": "code",
       "source": [
-        "airline_df.tail(5)"
+        "airline_df1.tail(5)"
       ],
       "metadata": {
         "id": "S_6drw7ZlC4q"
@@ -431,7 +424,7 @@
       "cell_type": "code",
       "source": [
         "# Dataset Rows & Columns count\n",
-        "print(f\"This dataset has {airline_df.shape[0]} row and {airline_df.shape[1]} columns\")"
+        "print(f\"This dataset has {airline_df.shape[0]} row and {airline_df1.shape[1]} columns\")"
       ],
       "metadata": {
         "id": "Kllu7SJgmLij"
@@ -461,7 +454,7 @@
       "cell_type": "code",
       "source": [
         "# Dataset Info\n",
-        "airline_df.info()"
+        "airline_df1.info()"
       ],
       "metadata": {
         "id": "e9hRXRi6meOf"
@@ -482,7 +475,7 @@
       "cell_type": "code",
       "source": [
         "# Dataset Duplicate Value Count\n",
-        "airline_df.duplicated().sum()"
+        "airline_df1.duplicated().sum()"
       ],
       "metadata": {
         "id": "1sLdpKYkmox0"
@@ -503,7 +496,7 @@
       "cell_type": "code",
       "source": [
         "#Drop all Duplicate value from the Dataset\n",
-        "airline_df.drop_duplicates(inplace=True)"
+        "airline_df1.drop_duplicates(inplace=True)"
       ],
       "metadata": {
         "id": "iEfErjCZnh38"
@@ -515,7 +508,7 @@
       "cell_type": "code",
       "source": [
         "#Final check of Duplicate value\n",
-        "airline_df.duplicated().sum()"
+        "airline_df1.duplicated().sum()"
       ],
       "metadata": {
         "id": "GPl5KkG8nh-C"
@@ -527,7 +520,7 @@
       "cell_type": "code",
       "source": [
         "#New shape of dataset\n",
-        "airline_df.shape"
+        "airline_df1.shape"
       ],
       "metadata": {
         "id": "q0FjXaKsnh6e"
@@ -543,6 +536,28 @@
       "metadata": {
         "id": "PoPl-ycgm1ru"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "airline_df=airline_df1.copy()"
+      ],
+      "metadata": {
+        "id": "rgHhjet-b9wp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "airline_df.head(2)"
+      ],
+      "metadata": {
+        "id": "ZMDokjrvcsvW"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1390,7 +1405,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Chart - 5 Which cabin type has more service ratings?"
+        "#### Chart - 5 Which cabin type has more recomended based on ground service ratings?"
       ],
       "metadata": {
         "id": "bamQiAODYuh1"
@@ -1412,7 +1427,8 @@
       "source": [
         "# Chart - 5 visualization code\n",
         "plt.figure(figsize=(10,5))\n",
-        "sns.boxplot(x=airline_df['cabin'],y=airline_df['cabin_service'], hue = airline_df['recommended'], palette= ['orange','purple'])"
+        "sns.lineplot(x=airline_df['cabin'],y=airline_df['cabin_service'],hue= airline_df['recommended'], palette= ['blue','red'])\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "Hq_iUtfxlO4W"
@@ -1432,7 +1448,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        " I pick the specific graph to check which cabin type has more recomended based on ground service ratings."
       ],
       "metadata": {
         "id": "dcxuIMRPYuh3"
@@ -1454,7 +1470,7 @@
         "\n",
         "1. First class travellers are least likely to recommend the airlines.\n",
         "\n",
-        "2. Recommendation is most probable when the cabin service is given full star rating ie 5 out of 5 here.\n",
+        "2. Recommendation is most probable when the cabin service is given star rating greater then 4.\n",
         "\n",
         "3. In economy class if we got ratings between 4 to 5 that means airlines recommended."
       ],
@@ -1484,7 +1500,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Chart - 6 Which cabin type has overall service ratings?"
+        "#### Chart - 6 Which cabin type has more recomended based on overall service ratings by customers?"
       ],
       "metadata": {
         "id": "OH-pJp9IphqM"
@@ -1493,7 +1509,34 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 6 visualization code"
+        "airline_df.head(2)"
+      ],
+      "metadata": {
+        "id": "llEE0JLVz4LT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(1,11):\n",
+        "  x= airline_df[airline_df['overall']==i]['recommended'].value_counts()\n",
+        "  print(f\"when overall rating= {i}\\n\",x)"
+      ],
+      "metadata": {
+        "id": "Y0aQCRyX2j-Q"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Chart - 6 visualization code\n",
+        "plt.figure(figsize=(10,5))\n",
+        "sns.boxplot(x=airline_df['cabin'],y=airline_df['overall'],hue= airline_df['recommended'], palette= ['blue','red'])\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "kuRf4wtuphqN"
@@ -1513,7 +1556,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "I picked this specific chart for show that which cabin type has more recomended based on overall service ratings by customers."
       ],
       "metadata": {
         "id": "loh7H2nzphqN"
@@ -1531,7 +1574,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "**From above plot**\n",
+        "1. If the trip is rated above 8 for overall section, the trip is most likely be recommended by the travellers.\n",
+        "\n",
+        "2. If it is below 3 , the unhappy travellers has not referred the airlines to their friends irrespective of their cabin type."
       ],
       "metadata": {
         "id": "VECbqPI7phqN"
@@ -1559,7 +1605,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Chart - 7 .Which travellers_type has overall service ratings?"
+        "#### Chart - 7 .Which airline made highest trips?"
       ],
       "metadata": {
         "id": "PIIx-8_IphqN"
@@ -1568,7 +1614,20 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 7 visualization code"
+        "airline_df1.head(2)"
+      ],
+      "metadata": {
+        "id": "s52ywVPLbKFz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Chart - 7 visualization code\n",
+        "airline_df1['airline'].value_counts()[:10].plot(kind='bar',figsize=(10,5),color='red')\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "lqAIGUfyphqO"
@@ -1588,7 +1647,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "I pick this chart for observed that which airline made highest trips?"
       ],
       "metadata": {
         "id": "iv6ro40sphqO"
@@ -1606,7 +1665,28 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "\n",
+        "**From the above plot we have observed that the top 10 airlines with most trips are-**\n",
+        "\n",
+        "1. Spirit Airlines\n",
+        "\n",
+        "2. American Airlines\n",
+        "\n",
+        "3. United Airlines\n",
+        "\n",
+        "4. British Airways\n",
+        "\n",
+        "5. Emirates\n",
+        "\n",
+        "6. china southern airline\n",
+        "\n",
+        "7. frontier airlines\n",
+        "\n",
+        "8. ryanair\n",
+        "\n",
+        "9. delta air lines\n",
+        "\n",
+        "10. turkish airlines"
       ],
       "metadata": {
         "id": "Po6ZPi4hphqO"
@@ -1634,7 +1714,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Chart - 8 Which airline made highest trips?"
+        "#### Chart - 8 Which cabin type has more recomended based on overall service ratings by customers?"
       ],
       "metadata": {
         "id": "BZR9WyysphqO"
@@ -1643,7 +1723,21 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 8 visualization code"
+        "airline_df.head(2)"
+      ],
+      "metadata": {
+        "id": "pBZTu6fPfurm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Chart - 8 visualization code\n",
+        "plt.figure(figsize=(10,5))\n",
+        "sns.boxplot(x=airline_df['cabin'],y=airline_df['seat_comfort'],hue= airline_df['recommended'], palette= ['blue','red'])\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "TdPTWpAVphqO"
@@ -1663,7 +1757,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "I picked this specific chart for show that which cabin type has more recomended based on seat comfort ratings by customers."
       ],
       "metadata": {
         "id": "Ob8u6rCTphqO"
@@ -1681,7 +1775,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "**From above plot**\n",
+        "1. If the trip is rated above 3 for seat comfort section, the trip is most likely be recommended by the travellers in Economy class but in Business class,Premium Class or First class \n",
+        "\n",
+        "2. If the trip is rated above 4 for seat comfort section, the trip is most likely be recommended by the travellersin Business class, Premium Class and theFirst class.\n",
+        "\n",
+        "3. If it is below 3 , the unhappy travellers has not referred the airlines to their friends irrespective of their cabin type and in the First class section it is below 4."
       ],
       "metadata": {
         "id": "mZtgC_hjphqO"
@@ -1718,7 +1817,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 9 visualization code"
+        "# Chart - 9 visualization code\n",
+        "#frequency distribution using histgram\n",
+        "airline_df.hist(bins=50, figsize=(20,15),color = 'blue')\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "B2aS4O1ophqO"
@@ -1738,7 +1840,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "For compare of all independent variable/features in the dataset"
       ],
       "metadata": {
         "id": "TVxDimi2phqP"
@@ -1756,7 +1858,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "**From above plot**\n",
+        "\n",
+        "1. The overall feature ratings of 1 to 2 occur more frequently.\n",
+        "\n",
+        "2. From Seat comfort feature, We can say that rating of 1 is highest and rating of 4 is the second highest.\n",
+        "\n",
+        "3. From cabin service feature, We can say that rating of 5 is highest and rating of 1 is the second highest.\n",
+        "\n",
+        "4. The food bev feature ratings of 2,4 and 5 are varies equally.Which means their frequency are approximately equal.\n",
+        "\n",
+        "5. The features of both the entertainment & ground service, We can say that ratings of 3 is highest and ratings of 1 is the second highest.\n",
+        "\n",
+        "6. From value for money feature, It clearly shows that most of the passenger gives ratings of 1 as highest. From this we can say that most of the airline does not provide good service to passenger."
       ],
       "metadata": {
         "id": "ngGi97qjphqQ"
