--- a/Airline_passenger.ipynb
+++ b/Airline_passenger.ipynb
@@ -6,7 +6,6 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [
-        "FJNUwmbgGyua",
         "mDgbUHAGgjLW",
         "448CDAPjqfQr",
         "-JiQyfWJYklI",
@@ -14,20 +13,7 @@
         "qYpmQ266Yuh3",
         "Seke61FWphqN",
         "b0JNsNcRphqO",
-        "BZR9WyysphqO",
-        "jj7wYXLtphqO",
-        "eZrbJ2SmphqO",
         "rFu4xreNphqO",
-        "YJ55k-q6phqO",
-        "gCFgpxoyphqP",
-        "OVtJsKN_phqQ",
-        "NC_X3p0fY2L0",
-        "UV0SzAkaZNRQ",
-        "YPEH6qLeZNRQ",
-        "q29F0dvdveiT",
-        "EXh0U9oCveiU",
-        "22aHeOlLveiV",
-        "g-ATYxFrGrvw",
         "Yfr_Vlr8HBkt",
         "8yEUt7NnHlrM",
         "tEA2Xm5dHt1r",
@@ -162,7 +148,24 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Write the summary here within 500-600 words."
+        "Data includes airline reviews from 2006 to 2019 for popular airlines around the world with multiple choice and free text questions. Data is scraped in Spring 2019. The main objectives are to predict whether passengers will refer the airline to their friends.\n",
+        "\n",
+        "We have Started with data loading and we have done EDA, feature engineering, data cleaning, target encoding feature selection and then model building.\n",
+        "So, we have used this models:\n",
+        "*\tLogistic Regression Model\n",
+        "*\tDecision Tree Model\n",
+        "*\tRandom Forest Model\n",
+        "*\tSupport Vector Machine Model\n",
+        "*\tK-Nearest-Neighbour Model\n",
+        "*\tNaïve Bayes\n",
+        "\n",
+        "*\tWe performed hyperparameter tuning for decision tree models, random forest models, K-Nearest Neighbors, Support Vector Machines, and Naive Bayes using the GridSearch CV method. This is done to improve accuracy and avoid overfitting criteria. After that, we completed the Gradient Boosting model by fine-tuning the hyperparameters.\n",
+        "*\tBased on an understanding of the business and problem use cases. The classification metrics for Recall are given first priority, Accuray second priority, and ROC AUC third priority.\n",
+        "*\tWe created classifier models using 6 different classifier types, all of which provided over 90% accuracy. We can conclude that LogisticRegression gives the best model.\n",
+        "*\tComparing the model evaluation metrics, we can see that the SVM is the most accurate model with a very small margin, and performs the best among the experimental models on the given dataset.\n",
+        "*\tThe most important features were overall rating and value for money, which helped the model predict whether passengers would recommend a particular airline to their friends.\n",
+        "*\tThe developed classifier models can be used to predict passenger recommendations as they enable airlines to identify influential passengers who can help generate more revenue.\n",
+        "*\tTherefore, in order to grow or grow their business, our customers must provide outstanding cabin service, ground handling, entertaining food, beverages and comfortable seating.\n"
       ],
       "metadata": {
         "id": "F6v_1wHtG2nS"
@@ -1817,6 +1820,17 @@
     {
       "cell_type": "code",
       "source": [
+        "airline_df.head(2)"
+      ],
+      "metadata": {
+        "id": "21-VYtEDmpOy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Chart - 9 visualization code\n",
         "#frequency distribution using histgram\n",
         "airline_df.hist(bins=50, figsize=(20,15),color = 'blue')\n",
@@ -1898,7 +1912,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Chart - 14 - Correlation Heatmap"
+        "#### Chart - 10 - Correlation Heatmap"
       ],
       "metadata": {
         "id": "NC_X3p0fY2L0"
@@ -1907,7 +1921,42 @@
     {
       "cell_type": "code",
       "source": [
-        "# Correlation Heatmap visualization code"
+        "airline_df.head(2)"
+      ],
+      "metadata": {
+        "id": "-Yv-9uK3mm3I"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Converting target as categorical data into numerical data: 'Label Encoding'"
+      ],
+      "metadata": {
+        "id": "UtvW98qomBQl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#converting targeted column\n",
+        "airline_df['recommended'].replace({'yes':1,'no':0},inplace=True)"
+      ],
+      "metadata": {
+        "id": "INbxaUpCkBnE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Correlation Heatmap visualization code\n",
+        "plt.figure(figsize=(8,6))\n",
+        "sns.heatmap(airline_df.corr(), annot=True)\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "xyC9zolEZNRQ"
@@ -1927,7 +1976,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "Correlation heatmaps can be used to find potential relationships between variables and to understand the strength of these relationships."
       ],
       "metadata": {
         "id": "DVPuT8LYZNRQ"
@@ -1945,7 +1994,21 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "**We can infer the following from the above correlation heatmap -**\n",
+        "\n",
+        "1. Value for money and overall are highly correlated to each other.\n",
+        "\n",
+        "2. overall and recommended are highly correlated to each other. \n",
+        "\n",
+        "3. cabin service and value for money is highly correlated with recommended.\n",
+        "\n",
+        "4. seat comfort and cabin service are very correlated to value for money.\n",
+        "\n",
+        "5. value for money and recommended are highly correlated to each other.\n",
+        "\n",
+        "6. Entertainment and ground service are very low correlated to each other.\n",
+        "\n",
+        "7. Entertainment and recommended are low correlated to each other."
       ],
       "metadata": {
         "id": "bfSqtnDqZNRR"
@@ -1954,7 +2017,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Chart - 15 - Pair Plot "
+        "#### Chart - 11 - Pair Plot "
       ],
       "metadata": {
         "id": "q29F0dvdveiT"
@@ -1963,7 +2026,21 @@
     {
       "cell_type": "code",
       "source": [
-        "# Pair Plot visualization code"
+        "airline_df.head(2)"
+      ],
+      "metadata": {
+        "id": "lzlqkYcamieS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Pair Plot visualization code\n",
+        "fig = plt.figure(figsize=(15, 8))\n",
+        "sns.pairplot(airline_df)\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "o58-TEIhveiU"
@@ -1983,7 +2060,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "to understand the best set of features to explain a relationship between two variables or to form the most separated clusters"
       ],
       "metadata": {
         "id": "eMmPjTByveiU"
@@ -2001,7 +2078,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "In here the pairplot is not helpfull for analysis."
       ],
       "metadata": {
         "id": "uPQ8RGwHveiV"
