--- a/Airline_passenger.ipynb
+++ b/Airline_passenger.ipynb
@@ -6,9 +6,28 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [
+        "vncDsAP0Gaoa",
+        "FJNUwmbgGyua",
+        "w6K7xa23Elo4",
+        "yQaldy8SH6Dl",
         "mDgbUHAGgjLW",
-        "448CDAPjqfQr",
-        "-JiQyfWJYklI",
+        "HhfV-JJviCcP",
+        "Y3lxredqlCYt",
+        "3RnN4peoiCZX",
+        "x71ZqKXriCWQ",
+        "7hBIi_osiCS2",
+        "JlHwYmJAmNHm",
+        "35m5QtbWiB9F",
+        "PoPl-ycgm1ru",
+        "H0kj-8xxnORC",
+        "nA9Y7ga8ng1Z",
+        "PBTbrJXOngz2",
+        "u3PMJOP6ngxN",
+        "dauF4eBmngu3",
+        "0wOQAZs5pc--",
+        "K5QZ13OEpz2H",
+        "lQ7QKXXCp7Bj",
+        "KSlN3yHqYklG",
         "y-Ehk30pYrdP",
         "qYpmQ266Yuh3",
         "Seke61FWphqN",
@@ -213,9 +232,9 @@
         "\n",
         "6.  Which cabin type has more recomended based on overall service ratings by customers?\n",
         "\n",
-        "7. Which travellers_type has overall service ratings?\n",
+        "7. Which airline made highest trips?\n",
         "\n",
-        "8. Which airline made highest trips?\n",
+        "8. Which cabin type has more recomended based on overall service ratings by customers?\n",
         "\n",
         "9. Comparison of all independent variable/features?"
       ],
@@ -543,6 +562,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#copy the dataset\n",
         "airline_df=airline_df1.copy()"
       ],
       "metadata": {
@@ -554,6 +574,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#print 1st 2row of dataset\n",
         "airline_df.head(2)"
       ],
       "metadata": {
@@ -578,7 +599,8 @@
       "cell_type": "code",
       "source": [
         "# Visualizing the missing values\n",
-        "airline_df.isnull().sum().plot(kind=\"bar\")"
+        "airline_df.isnull().sum().plot(kind=\"bar\")\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "3q5wnI3om9sJ"
@@ -730,7 +752,6 @@
       "cell_type": "code",
       "source": [
         "# Write your code to make your dataset analysis ready.\n",
-        "#Checking Percentage wise missing values.\n",
         "def missing_value(df):\n",
         "    percentage_missing=airline_df.isnull().sum()*100/len(airline_df)\n",
         "    missing_value_df=pd.DataFrame({\"column_name\":airline_df.columns,\"percentage_missing\":percentage_missing})\n",
@@ -745,6 +766,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Checking Percentage wise missing values.\n",
         "missing_value(airline_df)"
       ],
       "metadata": {
@@ -789,6 +811,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#drop aircraft column\n",
         "airline_df = airline_df.drop(['aircraft'],axis = 1)"
       ],
       "metadata": {
@@ -921,6 +944,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#replaces the NULL values with the value from the previous row\n",
         "airline_df['traveller_type'].fillna(method=\"ffill\",inplace=True)"
       ],
       "metadata": {
@@ -932,6 +956,7 @@
     {
       "cell_type": "code",
       "source": [
+        " ##replaces the NULL values with mode\n",
         " airline_df['cabin'].fillna(airline_df['cabin'].mode().values[0],inplace=True)"
       ],
       "metadata": {
@@ -977,6 +1002,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#shape of dataset\n",
         "airline_df.shape"
       ],
       "metadata": {
@@ -1118,7 +1144,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "* In the airplane most of the traveler are solo Leisure followed by Couple Leisure,Business and Famaly Leisure.We should focus on Famaily Leisre so that more famaily memeber travel together in the flight. "
       ],
       "metadata": {
         "id": "3cspy4FjqxJW"
@@ -1215,7 +1241,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "* Here we can see that most of the traveler travel in the Economy Class and very less taveler travel in the Premium and First class.\n",
+        "\n",
+        "\n",
+        "* In the Business class about 50% of traveler are not recommended to the other traveler and also same as First class for that reason we should make some effort in business for more recommendation by traveler.\n",
+        "\n",
+        "\n",
+        "* In the Economy class about 30% pessengers are not recommended the other so this is also a drawback of business. "
       ],
       "metadata": {
         "id": "BcBbebzrYklV"
@@ -1305,7 +1337,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "From the above insight "
       ],
       "metadata": {
         "id": "zfJ8IqMcYoAp"
